@@ -60,6 +60,8 @@ return declare( null,
         this.empty = false;
         this.browser = args.browser;
         this.store = args.store;
+
+        this.compiledConfig = {};
     },
 
     /**
@@ -808,6 +810,38 @@ return declare( null,
         return typeof confVal == 'function' && !dontRunImmediately[confKey]
             ? confVal.apply( context, context.callbackArgs || [] )
             : confVal;
+    },
+
+    _compileConfigurationPath: function( path ) {
+        var confVal = this.config;
+
+        if( typeof path == 'string' )
+            path = path.split('.');
+        while( path.length && confVal )
+            confVal = confVal[ path.shift() ];
+
+        if( path.length )
+            return function() { return null; };
+
+        return typeof confVal == 'function'
+            ? confVal
+            : function() { return confVal; };
+    },
+
+    /**
+     * Given a dot-separated string configuration path into the config
+     * (e.g. "style.bg_color"), get the value of the configuration.
+     * If args are given, evaluate the configuration using them.
+     * Otherwise, return a function that returns the value of the
+     * configuration when called.
+     */
+    getConf: function( path, args ) {
+        var func = this.compiledConfig[path];
+        if( ! func ) {
+            func = this.compiledConfig[path] = this._compileConfigurationPath( path );
+        }
+
+        return args ? func.apply( this, args ) : func;
     },
 
     _openDialog: function( spec, evt, context ) {
