@@ -80,8 +80,6 @@ var HTMLFeatures = declare( [ BlockBased, YScaleMixin, ExportMixin, FeatureDetai
      */
     _defaultConfig: function() {
         return {
-            description: 'note, description',
-
             maxFeatureScreenDensity: 0.5,
             blockDisplayTimeout: 5000,
 
@@ -98,6 +96,10 @@ var HTMLFeatures = declare( [ BlockBased, YScaleMixin, ExportMixin, FeatureDetai
                 minSubfeatureWidth: 6,
                 maxDescriptionLength: 70,
                 showLabels: true,
+
+                label: function( feature ) { return feature.get('name') || feature.get('ID'); },
+                description: 'note, description',
+
                 centerChildrenVertically: true  // by default use feature child centering
             },
             hooks: {
@@ -675,8 +677,8 @@ var HTMLFeatures = declare( [ BlockBased, YScaleMixin, ExportMixin, FeatureDetai
 
         // if the label extends beyond the feature, use the
         // label end position as the end position for layout
-        var name = feature.get('name') || feature.get('ID');
-        var description = this.config.description && scale > descriptionScale && this._getDescription(feature);
+        var name = this.getConf( 'style.label', [feature] );
+        var description = scale > descriptionScale && this._getDescription(feature);
         if( description && description.length > this.config.style.maxDescriptionLength )
             description = description.substr(0, this.config.style.maxDescriptionLength+1 ).replace(/(\s+\S+|\s*)$/,'')+String.fromCharCode(8230);
 
@@ -771,13 +773,13 @@ var HTMLFeatures = declare( [ BlockBased, YScaleMixin, ExportMixin, FeatureDetai
             case 1:
             case '+':
                 ah.className = "plus-" + this.config.style.arrowheadClass;
-                ah.style.cssText =  "left: 100%;" 
+                ah.style.cssText =  "left: 100%;";
                 featDiv.appendChild(ah);
                 break;
             case -1:
             case '-':
                 ah.className = "minus-" + this.config.style.arrowheadClass;
-                ah.style.cssText = "left: " + (-this.minusArrowWidth) + "px;"
+                ah.style.cssText = "left: " + (-this.minusArrowWidth) + "px;";
                 featDiv.appendChild(ah);
                 break;
             }
@@ -826,35 +828,46 @@ var HTMLFeatures = declare( [ BlockBased, YScaleMixin, ExportMixin, FeatureDetai
     // get the description string for a feature, based on the setting
     // of this.config.description
     _getDescription: function( feature ) {
+        var dConf = this.config.style.description || this.config.description;
 
-        // parse our description varname conf if necessary
-        var fields = this.descriptionFields || function() {
-            var f = this.config.description;
-            if( f ) {
-                if( lang.isArray( f ) ) {
-                    f = f.join(',');
-                }
-                else if( typeof f != 'string' ) {
-                    console.warn( 'invalid `description` setting for "'+this.name+'" track, falling back to "note,description"' );
-                    f = 'note,description';
-                }
-                f = f.toLowerCase().split(/\s*\,\s*/);
-            }
-            else {
-                f = [];
-            }
-            this.descriptionFields = f;
-            return f;
-        }.call(this);
+        if( ! dConf )
+            return null;
 
-
-        // return the value of the first field that contains something
-        for( var i=0; i<fields.length; i++ ) {
-            var d = feature.get( fields[i] );
-            if( d )
-                return d;
+        // if the description is a function, just call it
+        if( typeof dConf == 'function' ) {
+            return dConf.call( this, feature );
         }
-        return null;
+        // otherwise try to parse it as a field list
+        else {
+
+            // parse our description varname conf if necessary
+            var fields = this.descriptionFields || function() {
+                var f = dConf;
+                if( f ) {
+                    if( lang.isArray( f ) ) {
+                        f = f.join(',');
+                    }
+                    else if( typeof f != 'string' ) {
+                        console.warn( 'invalid `description` setting ('+f+') for "'+this.name+'" track, falling back to "note,description"' );
+                        f = 'note,description';
+                    }
+                    f = f.toLowerCase().split(/\s*\,\s*/);
+                }
+                else {
+                    f = [];
+                }
+                this.descriptionFields = f;
+                return f;
+            }.call(this);
+
+            // return the value of the first field that contains something
+            for( var i=0; i<fields.length; i++ ) {
+                var d = feature.get( fields[i] );
+                if( d )
+                    return d;
+            }
+            return null;
+        }
     },
 
     handleSubFeatures: function( feature, featDiv,
