@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+ * HTMLFeatures tracks now accept `style->label` and
+   `style->description` configuration variables variable that can be
+   set to a function callback that returns a string with the feature's
+   label or long description, respectively (issue #9).
+
  * Wiggle/XYPlot tracks now accept an array for their `variance_band`
    argument, allowing users to set the position of the variance bands
    to show (issue #133).
